@@ -1,17 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD pear-1.9.4.ebuild 1135 SHA256 8c91f6d88bf499f9534fe25a04d8050ff2c08bef8766d6e2ff6e6c64b5283015 SHA512 73b6170c9a48bf39ae463dd8a76db0661cd656e16bfa3b5dc2c02d465dcf36ed4a5a20b61eaa00e67c8ee820ef9fbc8128573a82a08adf8e57a0e066055a571e WHIRLPOOL aa04fa4d1fdfcfc702b780687ec20cb321d0498202896ac70176ca8f332b5981baf4b7f55bd457157dfc800869fed8590a28ff073b752b5a9c907e785cfad184
-MISC ChangeLog 4541 SHA256 b1ef0695dcb973214b61fbef529c26b9418de61126d7937abaa992715067c0cd SHA512 3c1ef994b33ebf27afbcd67c84c2900b4ddede9f9912b2f716b45f45ce9262024cebcd86a76434f4b9eb180b9243d9c1cbaccdbdb23ec58b3d5e0426a0352767 WHIRLPOOL b01089a4a527bc867ae17f3643515a40847930404b63496e845999337090b6dcf5d18f72fced7109e7db48e5958987a9d284065a879a5895f9967cc657d11046
+EBUILD pear-1.9.4.ebuild 1097 SHA256 9dec7be172e49b5e043436508551b08fb79dcd6093e4ddb2abcfc08745bcd360 SHA512 e3fc1d413866437cbe595876ede417426c402d3793a3f0fdf54fc0a2fe89912d53319ef279cb0796c5862e2864f0331a2145b45454917a25acbc43c9c80b82e0 WHIRLPOOL b702a21f8be563c98811b5a9fb7aa4c883559f80b15e72e404ab3a296c09ccaecbf9b8e5777a54a29c7395de7ba609092aba3404e6f1976dc52ded14ef4ea1c0
+MISC ChangeLog 4694 SHA256 25422e236cb18db9e47cb8e3ea284e6c7b27d6a1da4ddd17e90703955785a0f8 SHA512 57363d08d12f5d515ce006e9ffb1387330c0c0d5cf4a1e42e69a934310855443c4e980c57141c5d7dc59d0c53c1dc7a56db4269caa9a3c2d2894d7aacf55ae97 WHIRLPOOL 654309f4bd6bcfa406ecf7898ed12b2a728b1a259ad3f22069a66bb019849d48749b358b0f541c07f79edd4f7b020314b032bdc05c36aa8c53be53c398b5c01a
 MISC metadata.xml 157 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1 SHA512 94adacaefd7d989cc904cc3ee920b15d58fee61df13008ebcbefa66f9b5c58cab2a5fad0499d4b57cd41e5f1ae79c6cf44525d90e649d23ebacd7721466b8947 WHIRLPOOL 66f688809b11b84b1b9d782a3c03cfcefed87989862aaca20c17cb076349ec402da9eaf87f7be02f7b4de178ea42da31029baee1bcd8e563aeabe949d4ed41f9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJUNJKaAAoJEE4V4vFnx44dKpQH/2ofSYYUTUddhV0erIj3iw9W
-/R6OORn05TfE0Ly7tjHgg0Los0rCKBrYbr848C366fEUhjK35H134uCbo2Lgml0Y
-7NYBsfxCAwWruMOLoEXyvEwX8Kjm5qUI5xcdEtqtkWn0rYscolIGHE2/J303D+wI
-vlb9FbKmNnMiKTx+5ycHyPbKtfltw7UUcf+Esbn4lsurEKJlcS9oVmeTk11T1pBX
-CEhIs1o6tew+6DOePa7SmaakPX6pd4ukMXhvls8jkb1a0Jb8DjRui1h1Iybrzf2v
-b0r+LwQBZF3Mi56QX5aBAic4d4bI/MlnxL0RkkWc4sA1OhqhthcV6311A1D4xiw=
-=3bKS
+iQIcBAEBCAAGBQJUtpZFAAoJENH3ge/59KO2+YUP/1jquH2UOvC81ltzzli5XCzV
+hvpfX49BJqqYhgEQruCmVOFxBYgZICxKw78KExlapViTA0v0GkuHm6iOXHslHPj8
+P4hMTly8U2qYSY/9A+5FrJ1oMSBFUPPe9xkQlAdNvtPdK+h4lclvMjlHelVMnxph
+EBuG55LrLHkm5kHMlGfI5thQnfL1vD/hGDcYeqOJTn36RbLjfWOaqWbkOQREIRdZ
+rKrWByZGbum514Tqrq2YEDoDtuHH98v7z1rf2X1sKczwkELbYnn1EuRhzniGnEhS
+YnbmxrAebRtQNM+3GB5wCSw5ga7fz/cnmc+y+8zqoqTrc5buew52+D+h+hKdHVXG
+fC09vJLY4lyZ+XBZaRHayjSKHUVhCP97NqqFWepH8Te6520kbpi2n0wvDCm7AU0q
+rBW4fr2BRD1tVMJcjY+fwZe2/R22C8EeQ5C3yslpP2yUv/EuZ94ipiaERYJO/3DW
+waahBBxPfVdmSHiw/6uvM0KOX3au1CR9pYoXOieeTElGqHRBzOhiBQjrYd8TYO1L
+8d8vJeQiA2HxO/a3TLIVazdh+P/4DPrmS2IuA0idcLKk9R1VlX4EwT48yROuFOLp
+Iz9LvxgxOV4nzcjYyLEN+iAiCKTWLHJ+LbYiTUHF/9cBCEuzmk7rj3vB2o0utSqJ
+36Ih1m9iDTFwTpMug385
+=mwPS
 -----END PGP SIGNATURE-----
