@@ -7,4 +7,4 @@ KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 ~s390 ~sh sparc x86
 LICENSE=MIT
 RDEPEND=!<dev-php/PEAR-PEAR-1.8.1 ~dev-php/PEAR-PEAR-1.9.4 >=dev-php/PEAR-Archive_Tar-1.3.7 >=dev-php/PEAR-Console_Getopt-1.2.3 >=dev-php/PEAR-Structures_Graph-1.0.2 >=dev-php/PEAR-XML_Util-1.2.1
 SLOT=0
-_md5_=544ef83fa99a4eb8e3f907ee1c91fcde
+_md5_=47ba2db5d0c55bc4c5ec64988061bc9f
