@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare setup test
+DEPEND=virtual/pkgconfig dev-python/setuptools[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python2_7(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?] virtual/libusb:1 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Utility for advanced configuration of Razer mice (DeathAdder, Krait, Lachesis)
+EAPI=5
+HOMEPAGE=http://bues.ch/cms/hacking/razercfg.html
+IUSE=+pm-utils qt4 systemd +udev python_targets_python3_3 python_targets_python3_4 python_single_target_python3_3 python_single_target_python3_4
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=qt4? ( >=dev-python/pyside-1.2.1[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python2_7(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?] ) systemd? ( sys-apps/systemd ) udev? ( virtual/udev ) pm-utils? ( sys-power/pm-utils ) virtual/libusb:1
+SLOT=0
+SRC_URI=http://bues.ch/razercfg/razercfg-0.31.tar.bz2
+_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	f99a767f569b1f0731b3a1edd17c1d11	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	ed2ee20dc74a34be60f5b1b500e92a5b	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	udev	da001465a2e939c93f7ae16947ce3438
+_md5_=5e1268d6c8d70c9b09a144940c3afe05
