@@ -14,6 +14,7 @@ DIST razercfg-0.25.tar.bz2 69489 SHA256 a826d9793ad5be5048a227f4c23c168e554cbb93
 DIST razercfg-0.26.tar.bz2 70843 SHA256 79c8f9d39033ef65bd1b33086c08a05026ba07ee04c5445b41a4981c070cadf8 SHA512 6e6c60f31ceaf6189c6dfd0b90d9dab4a262dcc184429f7bbf2a8e1f54e3c1a012615d676312acc964a0f7942a47f8479985a3677f656afa12903c54d6aee056 WHIRLPOOL 3ba9fdfaea4533f312d2d281b4425ca66691e184dbd5769fa141b468febf6f5dba1016f77b076ab74a5ff934ad866204483b0570bb9f8d76dddd588ea43d9608
 DIST razercfg-0.29.tar.bz2 71786 SHA256 b737b4335808cb36b95019678554adea278f9295c5b53e958424c82fce529fbf SHA512 04d64023955dc08cf9b33c02542b596eb18372be3b259591ff59de85510846bca919c370180c3e997632e78785cdf42aa4d2cbeab0bceb09ab694d0b4e84362f WHIRLPOOL 2afe6e15e8b91771548ae94a51b511a901a68b1a31d9a4e840cfc5d4120226dc785a7c7d64e154a1a2c0070fa118736ad72ad49d5497e8f386fce633e6da2a46
 DIST razercfg-0.30.tar.bz2 71779 SHA256 bfc4dc858be5627833aa1ae1cdbbf1a85b77afaed5d61113de4bd6e8797ca527 SHA512 090e8efcccc65d6c94fe23033046148669cd089c23287dbe4c7d9eaf655f1ee7c8a2e6a5bc118af0088bced1674a45f12af46331796768790367a38ed24a1590 WHIRLPOOL e41e063fdd8da1bf78fe97af6f4d4fffefb068c81a2dd5219e9f488e498b166dacbd1fa358826e90e0a996005d01223ae0475a28b434cab0d760c0c0d277f8b1
+DIST razercfg-0.31.tar.bz2 77741 SHA256 f43b7de119e4e9333c17aacfd800e30598e7958c11ad82fddcaf9bda5c1dc3f6 SHA512 8173631f3b2dcc0e2da94aa9b1e6e86c4c296a7e8faf5e534dbbbd47a57e80f0af258143644fc498c9beb0c088b7ecf61e7af0e27e2b6760af009f58a639a0bb WHIRLPOOL 6f7d0bbefbb4284d4e35ef753ebfa93b8c08eb277930cc86af7776ea1147d97ee23c53a75bb55958b2050290548aa975ab4e9f457b03ff95d602474ad7bfdd22
 EBUILD razercfg-0.19_p20121013.ebuild 1559 SHA256 0e0048cd92227dbcb136d0157e1f308f24acf769f5a272cc03a7b19ccf72c96c SHA512 d3e8be35ef7e93aab401d38e2e42d307185d9f401237acfbb11eb0616254da2a92272fb15596fe8d716e9825da1d048cfeae83cf6bccfde3bff86321314f5884 WHIRLPOOL 8e7bb9205445eb7bfc348a7b7dbc008585f0b315019ef8ccf46e8e442b4b4009a54615a24546af26959bbdf45e29912b79a5c34cc176334e0aab16ef77344f80
 EBUILD razercfg-0.20.ebuild 1396 SHA256 60426806ac58b8c46365877e6d21409e8cf938eaaf0038ec893679ec88f104f2 SHA512 9e21d54e7efccea4f206e7f9200c6c25471ee4a0a0f6cd336e2030975109aa93992d2a2fe6e71b8cc2f947d4d8dd69092dac866d369314fb7dcfc4c1654cd8df WHIRLPOOL a7233b8f2fa2442636ea99f0a23224d64933281e22c466848cafe5fb983b9304011cc8e53649acdc82e85a2e61f33a8c65086e2a9175af6114ceeb9e43ac2466
 EBUILD razercfg-0.21.ebuild 1396 SHA256 6396fa020b1ad6026ecf0ea2ebe36cb2dbf4d9f60f3a6f66a09962b2264ab79f SHA512 b51a3442f0a299405dbf4fa77846911d9836c491ea9ec0f836c6d4d1ead9f10fa8640630d5d658333ffa081eec112274a9dc6fc6e7039088958b07059865ced9 WHIRLPOOL 528274624499d5a30ff8958a87ddfc7d20bea92e95c780118a19e5fffab178adc8783a915f9af974e74df72a7627361bedfbf94dd0e4f7a84eb81531132ff528
@@ -24,12 +25,25 @@ EBUILD razercfg-0.25.ebuild 1470 SHA256 608fc2f5d1ff136b3b4e10169915412d93b9a1af
 EBUILD razercfg-0.26.ebuild 1917 SHA256 a0c929a2fa234a47f73a3d95848694298499f0a2cd78cc39124697b360a596a8 SHA512 e8142ef37be2c81644a0e7d055cc7c6cf331fec34d9485a47e059fd1137dc7d767af190c33f8df1f21bab4b94658b1fc97468432c422a1539e6735747c2404c1 WHIRLPOOL cb390295f4713e8e03f540a45c1ffd635faa46b20b9b12cd54fe8e09242bc6a1df58bfa9f1e242db7dd5e7cd5328b53b75baac45944f0b3d7ccbfb35605408af
 EBUILD razercfg-0.29.ebuild 1912 SHA256 d3e72a8c43b6b03b1fa7e24d5af2a65b23fb1b766b80a9d1a46793a11b6c4aef SHA512 52bcf0b89117bfaccfe8bee78f0237234f46883d0c36e91bafbb0f9bddbbff4950821e0cc86135b9020f35c4c5e62207d4c028d3cb771d75f259320fbbca78b8 WHIRLPOOL d9184ec6e012b506d89946471789bb1e655a2bb5e5fca72ff97a6f7735343f41043b1a99f581c99a3c409511bf1f09ecbe81ad29f58fc19ccc845a0927ca2c23
 EBUILD razercfg-0.30.ebuild 1952 SHA256 9ee392cd6b1c1149c2b390584185378925821502e2a22f115b0faa1185834260 SHA512 9fbcb35be93e43cc38c60dd4a0f5568cd4dc12981c5c30947cd8b98d13df9404e0949b9bd7e26ea5cea56c04155d22e7db03ab98052227de5e9b25a4978d1b5c WHIRLPOOL 13f6e1ac8e9164490438c295735247c4582382d7e3202ed5f6021a1e5dc3aff8d633cd038b076957a395764236562d9ca9c7f46db2e222530dbb73ea8b4e90d7
-MISC ChangeLog 4757 SHA256 4d2bd2f9481b83b12b826025147a33e69fc66c947dbc8e75252fc1a96ff4ebf7 SHA512 8fd847a429a6edbeb69a1db4222f2e6bfedd9e751549deb225c298291eb769f30c874bd37c91d87f7021fb4d26b7ba78dc98beb617648ef466f6eb303160fd09 WHIRLPOOL d5f7bb67ab7cd5cf0961adf0c1b7bfbc24feb4399f6073f56742e0cdc99fd62cadd7ee73820baf6e9d3199ffe996f91a782c05a2971eca1a88f4c2a76c3e8ecf
+EBUILD razercfg-0.31.ebuild 1952 SHA256 2bf8929b4c35a74b1c09dbb5123cbfe6e6ed16ce8d69053f293951af454f34ec SHA512 bb21b43a583433717df2cd081b3ba638517e690672f17f574ba76056cc44af07de0d9f596dcedcc1d739dd1c8589c8c9e36dd588fafcd590e30c9c38e0b56152 WHIRLPOOL e23ca910cd5dc663fdb8292a3b55c272ab412c8d18312c14078e9075446d114979dfb54071df6914e760950f133467b973cbe86398a62489c6e4b734cd596f07
+MISC ChangeLog 4881 SHA256 8cca5e5d46bfc73cd3c2a526b119ad032fc8fd0638a7c365b192daf85edbeccc SHA512 2943aa057141cf654b7bc5f0a439c50559e8095a29f133efb4506ff22bcf1b18c8424f9502a065c75beebae469d8504920a8437ac3d9e100b865cf96f25123c2 WHIRLPOOL c12304021114075102092c73f0394d3224a5676cfe1d6467aab943f89cf04decd256ea96f96bcce51cc1065a9acb484dcc2edda874b2077e6dd07511403ef2f1
 MISC metadata.xml 952 SHA256 7f9afc150d5a533041a43bbe13a3f161dc12eb945ec925ac0a18cd7b00bfd04b SHA512 5a679fb9061a572e4a4c4f33840694d7a7e43601450d297fb30a25aa3e4c3fa1a491476467c10b440f7d7bfde0e67bf6f48c3f74f6f120ddbe7887172ac15a1a WHIRLPOOL d3c2c7f417a216d3bceee8fe1702362e2375d8abbc6b087784525ce147f81523578d32963b58bd01ca4af6d51663b1ca8ab29eb62115ca490c8a8072a6b55515
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlR48jMACgkQCaWpQKGI+9SyYwCeJQWz07eGXFTmQgtdafO+5y3y
-xeQAn0gD60p2MXBH+x2ctALVW28NGrTI
-=wbZI
+iQJ8BAEBCABmBQJUtpfDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0ODVGNzIyN0VCNkRCNUU5MzkzNzY5ODAw
+MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkAnA0QAJuFvGxclG1K0vkEZG6DXjeq
+Yu7RYt4CIwkBg3YUsLwPth7cP2aVT7LtTBBUGfWMRH2kXHiadNi30pAimsELN1LX
+B8wTYhmak7yJ/MXRet1ab2ZJUg09tjLudTPsJBM1lp0T/mIXFVN6hJGiIn0PC1fT
+9OhnSIJZG912DITLxNEi6pXsVlz3byBbBgFJbPFlibsHLHnHa2XfzBrJDrB7qPfa
+gV7IFHT9LVXRwNP8hQ9FFDaLp7eNcG3w65yXYmAHCZRpNoxUlDCYv3BkeKl0M8qH
+AdemVJU15PUVvL1eSmwaBVxE56gLZRX6ovGClFrMF/3vmHi+yT87pShboivpom/O
+0ekd6mionSM1RQLYpr02cKQdJM0R991J600Xv7OoHsmRWvu8UeQ4RyXVMFhnEhGP
+lUVxzBv25sf3ZgAXCG0dJZoI0DgXgbQaWZ3dEc96A0tcwAVhDLXFQvLjTCcDLRDx
+2/in2jcZ0JgmKrRV3jI+eMRfgUlgNcTd8j5Tc2A7me9hvLm/WGLLL3oUuq7EZTHr
+ohZXidf6qCbzYQSLCngfEq5WtU8UsRpFaV0tUM/cf3es6c0uHuVZ9vtKezTDce7r
++QnJL3fth13Yb6dN/lD4bQVkLA40ukBG1oIRS1K5UeD2AkvVXU4dOeGmU6B8bDs3
+M5t1UNkeUlrrvKPJOryv
+=nYJs
 -----END PGP SIGNATURE-----
