@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/razercfg
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.31 2014/11/28 22:07:45 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.32 2015/01/14 16:22:23 joker Exp $
+
+*razercfg-0.31 (14 Jan 2015)
+
+  14 Jan 2015; Christian Birchinger <joker@gentoo.org> +razercfg-0.31.ebuild:
+  Version bump
 
   28 Nov 2014; Pacho Ramos <pacho@gentoo.org> razercfg-0.30.ebuild:
   Support python 3.4
