@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/pear
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pear/ChangeLog,v 1.41 2014/10/08 01:25:40 grknight Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pear/ChangeLog,v 1.42 2015/01/14 16:16:01 grknight Exp $
+
+  14 Jan 2015; Brian Evans <grknight@gentoo.org> pear-1.9.4.ebuild:
+  Remove defunct pear.phpunit.de and pear.php-baustelle.de from channel
+  discovery
 
   08 Oct 2014; Brian Evans <grknight@gentoo.org> -pear-1.9.3.ebuild,
   pear-1.9.4.ebuild:
